--- a/event.html
+++ b/event.html
@@ -13,6 +13,7 @@
       <button @click="handleClick('1',$event)">click</button>
       <!-- INLINESTATE -->
       <button @click.middle="num++">click</button>
+      <!-- my git -->
     </div>
 
     <!-- <button @click="clickbtn('1',$event)">click</button> -->
