--- a/template.html
+++ b/template.html
@@ -7,14 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
   <body>
-    <div id="app" :test="test">{{msg}}</div>
+    <div id="app">{{msg}}</div>
 
     <script>
-      new Vue({
+      app = new Vue({
         el: "#app",
         data: {
           msg: "hello world",
-          test: "Hi,vue",
         },
       });
     </script>
